Abort pipeTo based on AbortSignal https://bugs.webkit.org/show_bug.cgi?id=215448

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* web-platform-tests/streams/piping/abort.any-expected.txt:
* web-platform-tests/streams/piping/abort.any.worker-expected.txt:
* web-platform-tests/streams/piping/close-propagation-forward.any-expected.txt:
* web-platform-tests/streams/piping/close-propagation-forward.any.worker-expected.txt:
* web-platform-tests/streams/piping/error-propagation-forward.any-expected.txt:
* web-platform-tests/streams/piping/error-propagation-forward.any.worker-expected.txt:
* web-platform-tests/streams/piping/flow-control.any-expected.txt:
* web-platform-tests/streams/piping/flow-control.any.worker-expected.txt:

Source/WebCore:

* CMakeLists.txt:
* DerivedSources-input.xcfilelist:
* DerivedSources-output.xcfilelist:
* DerivedSources.make:
* Modules/streams/ReadableStreamInternals.js:
(readableStreamPipeToWritableStream):
(pipeToFinalize):
* Modules/streams/WritableStream.js:
(initializeWritableStream):
* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSDOMGlobalObject.cpp:
(WebCore::makeDOMExceptionForBuiltins):
(WebCore::whenSignalAborted):
(WebCore::JSDOMGlobalObject::addBuiltinGlobals):
* bindings/js/WebCoreBuiltinNames.h:
* dom/AbortAlgorithm.h: Copied from Source/WebCore/dom/AbortSignal.idl.
* dom/AbortAlgorithm.idl: Copied from Source/WebCore/dom/AbortSignal.idl.
* dom/AbortSignal.cpp:
(WebCore::AbortSignal::whenSignalAborted):
* dom/AbortSignal.h:
* dom/AbortSignal.idl:


Canonical link: https://commits.webkit.org/228644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266177 268f45cc-cd09-0410-ab3c-d52691b4dbfc