Source/WebCore/dom/AbortSignal.h
@@ -27,6 +27,7 @@
 
 #include "ContextDestructionObserver.h"
 #include "EventTarget.h"
+#include "JSDOMPromiseDeferred.h"
 #include <wtf/Function.h>
 #include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
@@ -34,12 +35,15 @@
 
 namespace WebCore {
 
+class AbortAlgorithm;
 class ScriptExecutionContext;
 
 class AbortSignal final : public RefCounted<AbortSignal>, public EventTargetWithInlineData, public CanMakeWeakPtr<AbortSignal>, private ContextDestructionObserver {
     WTF_MAKE_ISO_ALLOCATED(AbortSignal);
 public:
     static Ref<AbortSignal> create(ScriptExecutionContext&);
+
+    static bool whenSignalAborted(AbortSignal&, Ref<AbortAlgorithm>&&);
 
     void abort();
 
@@ -48,7 +52,7 @@ public:
     using RefCounted::ref;
     using RefCounted::deref;
 
-    using Algorithm = WTF::Function<void()>;
+    using Algorithm = Function<void()>;
     void addAlgorithm(Algorithm&& algorithm) { m_algorithms.append(WTFMove(algorithm)); }
 
     void follow(AbortSignal&);
